external-projects/sui-prover/crates/sui-prover/tests/snapshots/dynamic_field/issue-237.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 260
expression: output
---
exiting with bytecode transformation errors
error[E0022]: UID object type not found: 2
   ┌─ tests/inputs/dynamic_field/issue-237.fail.move:19:5
   │
19 │     dynamic_field::borrow_mut(id, version)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
